fix: remove extra spacing above single button form element
We use a single button element form on the homepage for wrapping the submit
button. In this instance we do not need spacing above the submit button
instead relying on the vertical padding introduced by external blocks,
for example, <p> elements.

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -91,6 +91,18 @@ input[type="submit"] {
   &:hover {
     background-color: #e6141b;
   }
+
+  /**
+    * This is a fix when a single submit input element
+    * is placed inside a form element.
+    * We need to remove the margin-top and rely on other 
+    * elements to provide the spacing.
+    */
+  form > & {
+    &:first-child {
+      margin-top: 0;
+    }
+  }
 }
 
 blockquote,
